refactored api endpoints; added /overview/users
